kubet2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuber2-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kuber2-app
    spec:
      containers:
      - name: kuber2-java
        image: koyif/arch-homework:kuber2
        ports:
        - name: web
          containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: web
          initialDelaySeconds: 20
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: web
          initialDelaySeconds: 5
          periodSeconds: 5
