kubet2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kuber2-service
spec:
  selector:
    app: kuber2-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: web
  type: LoadBalancer
