kubet2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber2-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      #- path: /otusapp(/|$)(.*)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuber2-service
            port:
              number: 8000
